# caliper_4

./: .caliper.yml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CALIPER_AI_SYSTEM_PROMPT.md  CHANGELOG.md  CLAUDE_4_OPTIMIZATION_IMPLEMENTATION.md  COHERE_OPTIMIZATION_RECOMMENDATIONS.md  COHERE_OPTIMIZATION_RESULTS.md  Dockerfile  GEMINI_2_5_PRO_OPTIMIZATION.md  PRODUCTION_READY.md  PROMPT_FOR_PHASES_3_4.md  QUICK_START.md  README.md  RETRIEVAL_FIX_PLAN.md  STREAMLIT_REMOVAL_DASH_TESTING_PLAN.md  STREAMLIT_REMOVAL_EXECUTION_SUMMARY.md  TESTING_STRATEGY.md  TEST_RESULTS_2025-10-04.md  TekoaFacilityPlandraftv41.docx  TekoaFacilityPlandraftv41_cleaned.md  VENDOR_NEUTRALITY_AUDIT.md  VENDOR_NEUTRALITY_FIXES_SUMMARY.md  WARP.md  convert_docx_to_md_improved.py  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  run-tests.ps1  test_dash_tab.py  test_permission_debug.py
.claude/: settings.local.json
docs/: index.md  local_llm_dash_integration_plan.md  review_command.md
logs/: cleanup_20250818_140651_plan.txt  cleanup_20250818_140734_executed.txt
notebooks/: 04_flowload_workflow.ipynb  06_akart_workflow.ipynb
notes/: Obsidian Best Practices.md  Start Here - Environment Setup.md  Start Here.md
outputs/: 7q10.md  REs_manage.md  WWTP_I&I_Tale.pptx  WWTP_Slide4_Analysis.ipynb  akart_analysis_new.json  akart_selection_matrix_2.md  beltscreen.md  biosolids_workflow.md  biosolids_workflow_opus_g5.md  biosolids_workflow_test.md  ch4.docx  claude_sonnet_4_5_optimized.md  cohere_optimized.md  cohere_test_80nodes.md  crosswalk_grok.md  crosswalk_grok2.md  crosswalk_opus.md  example_with_references.md  flow_calculation_template.md  flow_calculation_template_grok4.md  flow_calculations.json  flow_context.json  flow_ctx_p1.json  flow_ctx_p10.json  flow_ctx_p11.json  flow_ctx_p12.json  flow_ctx_p13.json  flow_ctx_p14.json  flow_ctx_p15.json  flow_ctx_p16.json  flow_ctx_p17.json  flow_ctx_p18.json  flow_ctx_p2.json  flow_ctx_p3.json  flow_ctx_p4.json  flow_ctx_p5.json  flow_ctx_p6.json  flow_ctx_p7.json  flow_ctx_p8.json  flow_ctx_p9.json  (+37 more)
playwright-report/: index.html
prompts/: 01 Feasibility Report Outline.md  02 Regulatory Crosswalk.md  03 Data Inventory and Request List.md  04 Design Flow and Loadings.md  05 Population and EDU Projections (OFM).md  06 ii investigation.md  07 receiving water and limits screening.md  10 biosolids compliance.md  11 site selection.md  13 lagoon feasibility.md  flow.docx  flow.md  flow.part1.md  flow.part10.md  flow.part11.md  flow.part12.md  flow.part13.md  flow.part14.md  flow.part15.md  test_q.txt  (+14 more)
(+499 files in other folders)
