[tool.poetry]
name = "caliper"
version = "0.0.1"
description = "Temporary recovery pyproject for env repair"
authors = ["Caliper Maintainers"]
packages = [{ include = "caliper_v2", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
llama-index-core = "0.12.52.post1"
google-generativeai = ">=0.8.2,<0.9"
llama-cloud-services = "*"
dash = ">=2.17.0"
dash-bootstrap-components = ">=1.6.0"
plotly = "^5.22.0"

# LlamaIndex and related provider integrations
llama-index-llms-cohere = "~0.4.0"
llama-index-embeddings-cohere = "*"
cohere = "^5.17.0"

# CLI and utilities (promoted to top-level so scripts work without extras)
typer = "^0.15.0"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
pandas = "2.2.2"
openpyxl = "^3.1.5"
python-dateutil = "^2.9.0.post0"
tabulate = "^0.9.0"

[tool.poetry.group.llamaindex.dependencies]
# Core – pin to 0.12.x line for compatibility with installed plugins
# Use core in the root deps; do not include the meta starter package here

# This meta package should include core and common dependencies
# If we need specific packages, we can add them individually:

# LLM providers (versions compatible with 0.12.x core)
llama-index-llms-gemini = "0.4.12"          # Google Gemini
llama-index-llms-openai = "0.4.7"           # OpenAI GPT models
llama-index-llms-anthropic = "0.7.4"        # Anthropic Claude models

# Embeddings
llama-index-embeddings-openai = "0.3.1"     # OpenAI embeddings
llama-index-embeddings-huggingface = "0.5.4" # Local/HF embeddings

# Readers and parsers
llama-index-readers-file = "0.4.11"
pypdf = "^5.0.0"
llama-parse = "^0.5.0"

# Vector stores
llama-index-vector-stores-faiss = "0.4.0"

# Retrievers (none required for Gemini path right now)

# Postprocessors (none required for Gemini; remove Cohere reranker to avoid conflicts)

# Agent support (omit for now to avoid version drift)

# Core dependencies
faiss-cpu = "^1.8.0"
tiktoken = "^0.8.0"
nest-asyncio = "^1.6.0"
anthropic = ">=0.52.0"  # Direct Anthropic client for advanced features
google-cloud-aiplatform = "^1.38.0"  # For Vertex AI
google-auth = "^2.23.0"  # For Google authentication
llama-index-retrievers-bm25 = "<0.6.0"
llama-index-postprocessor-cohere-rerank = "<0.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.1"

[tool.poetry.scripts]
caliper_v2 = "caliper_v2.cli:app"
caliper = "caliper_v2.cli:app"

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
